--- a/kubernetesTestCode/mongo/mongo-express.yaml
+++ b/kubernetesTestCode/mongo/mongo-express.yaml
@@ -14,9 +14,15 @@ spec:
       labels:
         app: mongo-express
     spec:
+      initContainers:
+      - name: wait-for-mongodb
+        image: busybox:1.36 # A small image with basic network tools
+        command: ['sh', '-c', 'until nc -z mongodb-service 27017; do echo waiting for mongodb; sleep 2; done;']
       containers:
       - name: mongo-express
         image: mongo-express
+        command: ["node"]
+        args: ["app.js"]
         ports:
         - containerPort: 8081
         env:
@@ -43,9 +49,9 @@ metadata:
 spec:
   selector:
     app: mongo-express
-  type: LoadBalancer  
+  type: NodePort 
   ports:
     - protocol: TCP
       port: 8081
       targetPort: 8081
-      nodePort: 30002
+      nodePort: 30000
